# bot_assistant

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  setup.py
personal_assistant/: Clean_folder.py  Main_menu.py  Notes.py  ResponseWriter.py
personal_assistant/Address_book/: Application.py  Console.py  Models.py
